@@ -4,7 +4,8 @@
  - new preference for default size image editor (goffy)
  - new preference for show/hide copyright (goffy)
  - fixed bug with upload very big jpg images (goffy)
- - fixed bug with cropping images (gaby/goffy) 
+ - fixed bug with cropping images (goffy)
+ - added option to resize image during upload or not (goffy) 
  
 <h5>1.09 RC2</h5> [2019/04/09]
 <hr>
